# xtl

./: .appveyor.yml  .appveyor.yml.orig  .gitignore  .releash.py  .travis.yml  CMakeLists.txt  LICENSE  MODULE.bazel  README.md  azure-pipelines.yml  environment-dev.yml  readthedocs.yml  xtl.pc.in  xtlConfig.cmake.in
.azure-pipelines/: azure-pipelines-linux-gcc.yml  azure-pipelines-osx.yml  azure-pipelines-win.yml  unix-build.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: linux.yml  osx.yml  windows.yml
docs/: Doxyfile  Makefile  environment.yml
docs/source/: basic_types.rst  build-options.rst  changelog.rst  conf.py  containers.rst  design_patterns.rst  index.rst  installation.rst  meta_programming.rst  miscellaneous.rst  releasing.rst
include/xtl/: xany.hpp  xbase64.hpp  xbasic_fixed_string.hpp  xclosure.hpp  xcomplex.hpp  xcomplex_sequence.hpp  xdynamic_bitset.hpp  xhalf_float_impl.hpp  xhash.hpp  xhierarchy_generator.hpp  xiterator_base.hpp  xjson.hpp  xmasked_value.hpp  xmasked_value_meta.hpp  xmeta_utils.hpp  xmultimethods.hpp  xoptional.hpp  xoptional_meta.hpp  xoptional_sequence.hpp  xparallel_foreach.hpp  xpaths.hpp  xplatform.hpp  xsequence.hpp  xspan_impl.hpp  xsystem.hpp  xthreadpool.hpp  xtl_config.hpp  xtype_traits.hpp  xvariant.hpp  xvariant_impl.hpp  xvisitor.hpp
js/: README.md  build.sh  main.cpp  package.json  test.js
test/: BUILD.bazel  CMakeLists.txt  main.cpp  test_common_macros.hpp  test_xbase64.cpp  test_xbasic_fixed_string.cpp  test_xclosure.cpp  test_xcompare.cpp  test_xcomplex.cpp  test_xcomplex_sequence.cpp  test_xdynamic_bitset.cpp  test_xfunctional.cpp  test_xhalf_float.cpp  test_xhash.cpp  test_xhierarchy_generator.cpp  test_xiterator.cpp  test_xiterator_base.cpp  test_xmasked_value.cpp  test_xmeta_utils.cpp  test_xmultimethods.cpp  test_xoptional.cpp  test_xoptional.cpp.in  test_xparallel_foreach.cpp  test_xpaths.cpp  test_xplatform.cpp  test_xproxy_wrapper.cpp  test_xsequence.cpp  test_xsystem.cpp  test_xthreadpool.cpp  test_xtype_traits.cpp  test_xvariant.cpp  test_xvisitor.cpp
